--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>你好，GitHub</title>
   </head>
   <body>
-    <h1>海佳很嫩</h1>
+    <h1>鐘廷亦的遺照</h1>
+    <img src="./S__39034882.jpg">
   </body>
 </html>
