--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>裡面有正妹</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>你好，GitHub</title>
+  <style>
+    .container {
+      display: flex;
+      flex-direction: row;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>裡面有正妹</h1>
+  <div class="container">
     <img src="./S__39034882.jpg">
-  </body>
+    <img src="./S__39034886.jpg">
+  </div>
+</body>
 </html>
