--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     .container {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
+    }
+    img {
+      width: 480px;
+      height: 480px;
     }
   </style>
 </head>
