--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       width: 480px;
       height: 480px;
     }
+    img:hover {
+      opacity: 0.3;
+    }
   </style>
 </head>
 
@@ -29,6 +32,10 @@
     <img src="./S__39034890_0.jpg">
     <img src="./S__39034891_0.jpg">
     <img src="./S__39034892_0.jpg">
+    <img src="./S__10821734.jpg">
+    <img src="./S__39034898_0.jpg">
+    <img src="./S__39034900_0.jpg">
+    <img src="./S__39034901_0.jpg">
   </div>
 </body>
 </html>
